--- a/starter/js/kata/package.json
+++ b/starter/js/kata/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "prettier": "prettier --write \"{{src,e2e}/**/*,*}.{scss,ts}\"",
     "e2e": "ng e2e"
   },
   "private": true,
